extract defined type info